# research-project-template

./: .gitignore  README.md  devcontainer.Dockerfile  main.py  pyproject.toml
.devcontainer/: devcontainer.json
artefacts/: README.md
notebooks/: placeholder.ipynb
